--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <div class="banner">
+        <div class="banner-content">
+            <div class="title">
+                IFC-viewer
+            </div>
+            <div class="logo">
+                <img src="logo.png" alt="Logo">
+            </div>
+        </div>
+    </div>
+    
     <div class="file-box" id="fileBox">
         <div class="drag-drop-area" id="dragDropArea">
             <p>Drag and drop files here</p>
