Added logo to banner

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 IFC-viewer
             </div>
             <div class="logo">
-                <img src="logo.png" alt="Logo">
+                <img src="./img/logo_white.svg" alt="Logo">
             </div>
         </div>
     </div>
