After inserting an IFC file, a new page opens

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>IFC-viewer</title>
 </head>
 <body>
     <div class="banner">
